k8s/coma/apps/media/security-policy.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: media-to-envoy-proxy-bouncer
  namespace: envoy-gateway-system
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: media
  to:
    - group: ""
      kind: Service
      name: envoy-proxy-bouncer
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: media-security
  namespace: media
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: jellyfin
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: jellyseerr
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: navidrome
  extAuth:
    grpc:
      backendRefs:
        - group: ""
          kind: Service
          name: envoy-proxy-bouncer
          port: 8080
          namespace: envoy-gateway-system
